# agentmemory

./: Cargo.toml  README.md
docs/: design.md
src/: error.rs  lib.rs  lifecycle.rs  schema.rs  search.rs  store.rs
src/models/: entity.rs  memory.rs  mod.rs  relationship.rs
tests/: integration_test.rs
