[package]
name = "agentmemory"
version = "0.1.0"
edition = "2021"
description = "A lightweight embedded memory system for AI agents powered by SQLite"

[dependencies]
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
